Worked on overflow issue with project-cards

--- a/src/components/design.css
+++ b/src/components/design.css
@@ -103,12 +103,15 @@ ul{
 }
 
 .project-bottom{
-    align-items: center;
-    font-size: 14px;
     display: flex;
-    gap: 1.5rem;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 14px;
+    margin-top: 1rem;
 }
-
+.github-stats{
+    display: flex;
+}
 .github-stat{
     display: flex;
     gap: 0.5rem;
